[package]
name = "sm-runner"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
egg = { version = "0.10.0", features = [] }

[dependencies.sm-types]
path = "../sm-types"
features = []


[dependencies.sm-ast]
path = "../sm-ast"
features = []

[dev-dependencies]

[features]
default = []
