[package]
name = "sm-types"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
egg = { version = "0.10.0", features = [] }

[dev-dependencies]

[features]
default = []
serde = ["num-bigint/serde"]
